--- a/style.css
+++ b/style.css
@@ -119,3 +119,34 @@ h1 {
     justify-content: center;
     gap: 30px;
 }
+
+/* Third section(quote section) of the page */
+.quote-section {
+    background-color: #E5E7EB;
+    padding: 60px 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.quote-container {
+    max-width: 800px;
+    width: 100%;
+}
+
+.quote-text {
+    font-size: 36px;
+    color: #1f2937;
+    font-style: italic;
+    font-weight: lighter;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.author-name {
+    text-align: right;
+    font-size: 18px;
+    font-weight: bold;
+    color: #1f2937;
+}
+
+/*Fourth section of the page(CTA)*/
