--- a/style.css
+++ b/style.css
@@ -150,3 +150,31 @@ h1 {
 }
 
 /*Fourth section of the page(CTA)*/
+.CTA-container {
+    background-color: #3882F6;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 80px;
+    border-radius: 8px;
+    margin: 60px auto;
+    max-width: 1000px;
+}
+
+.cta-text1 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.cta-text2 {
+    font-size: 16px;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.589);
+}
+
+.cta-button button {
+    border: 2px solid white;
+}
+
