Finished styling the footer

--- a/style.css
+++ b/style.css
@@ -178,3 +178,15 @@ h1 {
     border: 2px solid white;
 }
 
+/*Footer section of the page(CTA)*/
+.footer{
+    background-color: #1f2937;
+    color: #E5E7EB;
+    display: flex;
+    height: 100px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    
+}
